# MantellaPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md  vcpkg.json
Scripts/: MantellaPlugin.psc
include/: Mantella_TypedDictionary.h  TypedDictionary.h
src/: Crosshair.cpp  HTTP.cpp  InfoPatcher.cpp  Launcher.cpp  Mantella_TypedDictionary.cpp  PCH.h  TypedDictionary.cpp  VanillaDialogue.cpp  hooks.cpp  plugin.cpp
